--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ setup_requires =
 python_requires = >=3.6
 # list-semi
 install_requires =
+    async_tools @ git+https://github.com/HeavenVolkoff/async_tools.git
     # List your packages dependencies
 # bool (Automatically include any data file, declared inside MANIFEST.in, inside your package.)
 # It's recommend to use package_data and exclude_package_data instead, if possible.
