Update setup.cfg to conform to PEP 561

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ where = src
 
 # Put data files inside package
 [options.package_data]
-* = VERSION
+* = VERSION, py.typed
 # package_name = files_pattern, ...
 
 # Extra dependencies, can be installed with: `pip install package[extra]`
