Added code coverage with codecov

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,4 +80,6 @@ docs =
     # Put your documentation requirements here
 tests =
     asynctest
+    coverage
+    codecov
     # Put your tests requirements here
