--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,7 @@ install:
     - pip install ".[tests]"
 
 script:
-    - python -m unittest discover -s tests
+    - coverage run -m unittest discover -s tests
+
+after_success:
+    - codecov
