--- a/.coveragerc
+++ b/.coveragerc
@@ -1,13 +1,26 @@
+# .coveragerc to control coverage.py
 [run]
 branch = True
 source = src/prop
 
 [report]
 exclude_lines =
-    if self.debug:
+    # Have to re-enable the standard pragma
     pragma: no cover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
     raise NotImplementedError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
     if __name__ == .__main__.:
+
 ignore_errors = True
+
 omit =
     tests/*
