Very Much Broken  - Some new ideas to improve chain resolution, nothing concrete yet

--- a/black.toml
+++ b/black.toml
@@ -5,18 +5,21 @@
 
 [tool.black]
 line-length = 99
-py36 = true
+target-version = ['py37']
 include = '\.pyi?$'
 exclude = '''
-/(
-    \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+)
 '''
