--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,9 @@
 # .coveragerc to control coverage.py
 [run]
 branch = True
+# If coverage have problems file detection, uncomment the line below and change
+# it to your package name
+# source = foundation
 
 [report]
 exclude_lines =
@@ -14,6 +17,7 @@ exclude_lines =
     # Don't complain if tests don't hit defensive assertion code:
     raise AssertionError
     raise NotImplementedError
+    \.\.\.
 
     # Don't complain if non-runnable code isn't run:
     if 0:
@@ -22,4 +26,5 @@ exclude_lines =
 ignore_errors = True
 
 omit =
+    test/*
     tests/*
