--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     # https://pypi.org/pypi?%3Aaction=list_classifiers
 download_url =
 project_urls =
@@ -42,21 +43,27 @@ long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
 
 [options]
-# bool (Indicates whether your package is able to be run from within a zip archive)
+# bool
 zip_safe = True
+    # Indicates whether your package is able to be run from within a zip archive or not
 # list-semi
 setup_requires =
+    pip >= 18.1, != 19.0
     setuptools>=40.1.0
-    # List all packages required for installing your package (Running setup.py)
-# str (Define python interpreter version requirement)
+    # List all packages required in order to run your package's setup.py
+# str
 python_requires = >=3.6
+    # Define the required python interpreter version to run you package
 # list-semi
 install_requires =
+    importlib_metadata >= 0.9
+    typing-extensions
     async_tools @ git+https://github.com/HeavenVolkoff/async_tools.git@v2.0.0
     # List your packages dependencies
-# bool (Automatically include any data file, declared inside MANIFEST.in, inside your package.)
-# It's recommend to use package_data and exclude_package_data instead, if possible.
+# bool
 include_package_data = False
+    # Automatically include in your package any data file declared inside MANIFEST.in
+    # If possible, it is recommended to use package_data and exclude_package_data instead
 
 # Configure find: and find_namespace:
 [options.packages.find]
@@ -64,7 +71,7 @@ where = src
 
 # Put data files inside package
 [options.package_data]
-* = VERSION, py.typed
+* = py.typed
 # package_name = files_pattern, ...
 
 # Extra dependencies, can be installed with: `pip install package[extra]`
