--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,14 @@
 # .coveragerc to control coverage.py
 [run]
+omit =
+    test/*
+    tests/*
+    .venv/*
 branch = True
-# If coverage have problems file detection, uncomment the line below and change
-# it to your package name
-# source = foundation
+source = prop
 
 [report]
+ignore_errors = True
 exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
@@ -22,9 +25,3 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
-
-ignore_errors = True
-
-omit =
-    test/*
-    tests/*
